# octofitterpy

./: .coveragerc  .gitignore  CITATION.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  CI_Windows.yml  CI_conda_forge.yml  CI_large_nightly.yml  CI_mac.yml  pypi_deploy.yml  update_backend.yml
examples/: README.md  basic-fit-example.md  demo.ipynb  example.py  rv-examples.md
octofitterpy/: __init__.py  __main__.py  julia_helpers.py  julia_import.py  juliapkg.json  python_interface.py
