[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "octofitterpy"
version = "3.1.0"
authors = [
    {name = "William Thompson", email = "will.thompson@outlook.com"},
]
description = "Fast and flexible orbit fitting"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["octofitterpy"]
include-package-data = false
package-data = {octofitterpy = ["juliapkg.json"]}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.isort]
profile = "black"
